recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:12: error: Missing closing brace `}' assumed here
} 
^