recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
  if (i!=0) {
    for (i<- 1 to 3) {
      sierpinski(level-1,length/2)
      avance(length)
    }
  }
  else {
    for (i<- 1 to 3) {
      avance(length)
      droite(120)
  }
}